tests/Fixtures/router/pages/error/404.php
<?php

declare(strict_types=1);

echo 'Not Found';
